gitOps/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" 
spec:
  rules:
  - host: argo.k3s.shuaizhang.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
